NTI-4732: fixed webkit-line-clamp not support on firefox IE

--- a/src/carousel/carousel-item/components/CarouselItem.scss
+++ b/src/carousel/carousel-item/components/CarouselItem.scss
@@ -21,6 +21,7 @@
 				display: -webkit-box;
 				-webkit-line-clamp: 2;
 				-webkit-box-orient: vertical;
+				max-height: 2.5em;
 			}
 
 			.detail-txt {
@@ -35,6 +36,7 @@
 				display: -webkit-box;
 				-webkit-line-clamp: 4;
 				-webkit-box-orient: vertical;
+				max-height: 5.6em;
 			}
 
 			.content-carousel {
